fix: scrollbar width

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,6 @@
 
 :root {
   scrollbar-width: thin;
-  scrollbar-color: transparent transparent;
 }
 
 ::-webkit-scrollbar {
@@ -28,10 +27,6 @@
 }
 
 @media (width >= 640px) {
-  :root {
-    scrollbar-color: hsl(var(--p)) transparent;
-  }
-
   ::-webkit-scrollbar {
     display: block;
   }
